# Simple_IA_Chat_Connected_Ollama

./: README.md  __init__.py  main.py  pyproject.toml
chat/: cli.py  ollama_client.py  ui.py
